Bug 198629 - kmail freeze when adding email to address book
Summary: kmail freeze when adding email to address book
Status: RESOLVED FIXED
Alias: None
Product: kmail
Classification: Unmaintained
Component: general (other bugs)
Version First Reported In: unspecified
Platform: RedHat Enterprise Linux Linux
: NOR normal
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2009-07-02 11:26 UTC by mps
Modified: 2009-07-02 17:33 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description mps 2009-07-02 11:26:20 UTC
Version:            (using KDE 4.2.90)
OS:                Linux
Installed from:    RedHat RPMs


I right click on an address in the message pane and select add to addressbook, kmail ui freezes, but it is still running and still collects messages, it just does't respond to mouse or keyboard and I have to kill it.

I had one composer window open, the cursor was in the To field - still flashing there, but doesn't respond.

Had this three times now, this time I attached gdb and this is what it says:

0x007dd422 in __kernel_vsyscall ()
(gdb) bt
#0  0x007dd422 in __kernel_vsyscall ()
#1  0x0087c256 in nanosleep () from /lib/libc.so.6
#2  0x008b579c in usleep (useconds=100) at ../sysdeps/unix/sysv/linux/usleep.c:33
#3  0x00516a03 in KPIM::KAddrBookExternal::addAddressee (addr=@0xbfeb8320)
    at /usr/src/debug/kdepim-4.2.90/libkdepim/kaddrbookexternal.cpp:162
#4  0x00517f35 in KPIM::KAddrBookExternal::addEmail (addr=@0xbfeb8378, parent=
    0x8aa2800) at /usr/src/debug/kdepim-4.2.90/libkdepim/kaddrbookexternal.cpp:95
#5  0x00e44466 in KMMailtoAddAddrBookCommand::execute (this=0x977af18)
    at /usr/src/debug/kdepim-4.2.90/kmail/kmcommands.cpp:564
#6  0x00e3e232 in KMCommand::slotPostTransfer (this=0x977af18,
    result=KMCommand::OK) at /usr/src/debug/kdepim-4.2.90/kmail/kmcommands.cpp:273
#7  0x00e4855f in KMCommand::qt_metacall (this=0x977af18,
    _c=QMetaObject::InvokeMetaMethod, _id=9, _a=0xbfeb8508)
    at /usr/src/debug/kdepim-4.2.90/i586-redhat-linux-gnu/kmail/kmcommands.moc:87
#8  0x00e48e52 in KMMailtoAddAddrBookCommand::qt_metacall (this=0x977af18,
    _c=QMetaObject::InvokeMetaMethod, _id=9, _a=0xbfeb8508)
    at /usr/src/debug/kdepim-4.2.90/i586-redhat-linux-gnu/kmail/kmcommands.moc:278
#9  0x0514ec53 in ?? ()
#10 0x0977af18 in ?? ()
#11 0x00000000 in ?? ()

Hope that is useful.

Cheers
M.
Comment 1 Allen Winter 2009-07-02 17:33:06 UTC
SVN commit 990529 by winterz:

remove the FIXME HACK in addAddressee() that should no longer be needed and should
have been removed waaaayyy back in 4.0.

Might fix some of the kmail freeze problems when adding emails to the addressbook.
Let's assume that it does until reported otherwise.

BUG: 198629
MERGE: 4.3,e4


 M  +0 -8      kaddrbookexternal.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=990529