remove the FIXME HACK in addAddressee() that should no longer be needed and should have been removed waaaayyy back in 4.0.

Might fix some of the kmail freeze problems when adding emails to the addressbook.
Let's assume that it does until reported otherwise.

BUG: 198629
MERGE: 4.3,e4

svn path=/trunk/KDE/kdepim/; revision=990529